--- a/candy.css
+++ b/candy.css
@@ -1,8 +1,12 @@
-body{
+/*Programmer: Sachorra Douglas
+Date: 11/2/2024
+Project: Candy Crush Rep*/
+
+body {
     background: url("./background.jpg") no-repeat center center fixed;
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
-    color:aliceblue;
+    color: white;
     text-align: center;
 }
 
